                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 18-05-2006 changed: lowered protocol level of cddb to 5 again (none utf8 queries to freedb)
 - 18-05-2006 added: masterlock to AdvancedSettings.xml! Check XBMC Wiki for more informations!
 - 18-05-2006 removed: Masterlock Max. Retries from GUI ! Default Max. Value is: 3!
 - 18-05-2006 changed: Masterlock Settings Controll and  GUI conditions Controll
 - 18-05-2006 added: Master User Modes: Normal User/ Advanced User! Check XBMC Wiki for more informations!
 - 18-05-2006 fixed: [ 1490023 ] Locked overlay thumb not showing
 - 18-05-2006 fixed: [ 1478366 ] Master Lock
 - 18-05-2006 fixed: [ 1478514 ] Couple of problems with MASTERLOCK
 - 18-05-2006 fixed: [ 1479324 ] Wrong FTP username in settings when not online (a test is required)
 - 18-05-2006 fixed: [ 1479328 ] Wrong modchip detection message

 - 17-05-2006 fixed: [ 1484760 ] 1080i Arial TTF unicode none english charset error
 - 17-05-2006 changed: cosmetic change to music scanner dialog + kai / trainer dialog.+
 - 17-05-2006 fixed: launching game with kai from my programs with trainer active crashed.
 - 17-05-2006 added: Esperanto language file (Thnx to taiq)
 - 17-05-2006 updated: Spanish language file (Thnx to jose_t)
 - 17-05-2006 updated: Swedish language file (Thnx to blittan)
 - 17-05-2006 updated: Chinese (Traditional) language file (Thnx to omenpica)
 - 17-05-2006 updated: German (Austrian) language file (Thnx to CEOMR)
 - 17-05-2006 updated: Russian language file (Thnx to que_)
 - 17-05-2006 fixed: only use pap wma codec if applicable.
 - 17-05-2006 fixed: some small issues in file browser (directory history in root, selected item label missed a /).